--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>The Polymaths</title>
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     @media only screen and (max-width:991.5px) {
       a.navbar-brand{
         position: absolute; left:50%; transform: translateX(-50%); top: 8px;
