--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>The Polymaths</title>
   <style>
-    *{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     @media only screen and (max-width:991.5px) {
-      a.navbar-brand{
-        position: absolute; left:50%; transform: translateX(-50%); top: 8px;
+      a.navbar-brand {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 8px;
       }
     }
+
+    html {
+      min-height: 100%;
+    }
+
+    body {
+      background:linear-gradient(to bottom left,rgb(255, 0, 242) 20%, transparent 20%), linear-gradient(to bottom right,yellow 25%, transparent 25%), linear-gradient(to bottom right, transparent 65%, rgb(0, 255, 128) 65%),
+      linear-gradient(to bottom left,pink 55%,cyan 55%);}
   </style>
 </head>
 
@@ -26,7 +32,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="index.html">The Polymaths</a>
@@ -59,4 +65,5 @@
 </body>
 <script src="blogs.js" type="module"></script>
 <script src="data.js" type="module"></script>
+
 </html>
