--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     }
 
     body {
-      background:linear-gradient(to bottom left,rgb(255, 0, 242) 20%, transparent 20%), linear-gradient(to bottom right,yellow 25%, transparent 25%), linear-gradient(to bottom right, transparent 65%, rgb(0, 255, 128) 65%),
-      linear-gradient(to bottom left,pink 55%,cyan 55%);}
+      background:linear-gradient(to bottom left,rgba(255, 0, 242, 0.80) 28%, transparent 30%), linear-gradient(to bottom right,rgba(255, 255, 0, 0.80) 30%, transparent 32%), linear-gradient(to bottom right, transparent 78%, rgba(0, 255, 128, 0.788) 80%),
+      linear-gradient(to bottom left,rgba(255, 192, 203, 0.808) 67%,rgba(0, 255, 255, 0.808) 70%);}
   </style>
 </head>
 
