--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     #container .card{
       transition: transform 0.5s,box-shadow 0.5s;
     }
+    img{
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      padding: 16px 16px 0 16px;
+      border-radius: 50px;
+    }
     #container .card:hover{
       transform: translateX(20px);
       transform-style: preserve-3d;
