--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,14 @@
                 transform: translateX(-50%);
                 top: 8px;
             }
+            div#content,div#date{
+                width:85%;
+            }
+        }
+        @media only screen and (max-width:600px) {
+            div#content,div#date{
+                width:90%;
+            }
         }
 
         html {
@@ -43,10 +51,26 @@
             background-color: floralwhite;
             text-align: justify;
             border: 1px solid grey;
-            border-radius: 5px;
-            margin: 20px auto;
+            border-radius:0 0 5px 5px;
+            margin:0 auto 35px auto;
             box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
             padding: 20px;
+        }
+        #date{
+            box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
+            padding:10px;
+            background-color: black;
+            width: 70%;
+            margin: 35px auto 0px auto;
+            border-radius: 5px 5px 0 0;
+            color: white;
+            font-size: 17px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        #like{
+            cursor: pointer;
         }
     </style>
 </head>
@@ -73,13 +97,31 @@
             </div>
         </div>
     </nav>
-    <div id="content">
-        <h2 style="text-align: center;"></h2>
-        <hr>
-        <p style="text-align: justify;"></p>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+<script type="module">
+    import {data} from "./data.js"
+    var blog_title=localStorage.getItem("blog title");
+    for(var i=0;i<data.length;i++){
+        if(data[i].title==blog_title){
+            document.body.innerHTML+=`<div id="date"><div>Published : ${data[i].date}</div><svg id="like" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-heart-fill" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+      </svg></div>
+    <div id="content">
+        <h2 style="text-align: center;">${data[i].title}</h2>
+        <hr>
+        <p style="text-align: justify;">${data[i].sample}</p>
+    </div>`;
+        }
+    }
+    var like=document.getElementById("like");
+    like.onclick=()=>{
+        if(like.style.fill=="red")
+            like.style.fill="white";
+        else like.style.fill="red";
+    }
+</script>
+<script src="data.js" type="module"></script>
 </html>
