--- a/writers.html
+++ b/writers.html
@@ -14,11 +14,10 @@
   }
 
   body {
-    background: linear-gradient(to bottom left, rgba(255, 0, 242, 0.80) 28%, transparent 30%),
-      linear-gradient(to bottom right, rgba(255, 255, 0, 0.80) 30%, transparent 32%),
-      linear-gradient(to bottom right, transparent 78%, rgba(0, 255, 128, 0.788) 80%),
-      linear-gradient(to bottom left, rgba(255, 192, 203, 0.808) 67%, rgba(0, 255, 255, 0.808) 70%)
-  }
+    background: linear-gradient(to bottom left, rgba(102, 101, 102, 0.8) 28%, transparent 30%),
+        linear-gradient(to bottom right, rgba(63, 63, 56, 0.8) 30%, transparent 32%),
+        linear-gradient(to bottom right, transparent 78%, rgba(61, 58, 58, 0.788) 80%),
+        linear-gradient(to bottom left, rgba(53, 52, 52, 0.808) 67%, rgba(73, 77, 77, 0.808) 70%);}
 </style>
 
 <body>
