--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         linear-gradient(to bottom right, rgba(63, 63, 56, 0.8) 30%, transparent 32%),
         linear-gradient(to bottom right, transparent 78%, rgba(61, 58, 58, 0.788) 80%),
         linear-gradient(to bottom left, rgba(53, 52, 52, 0.808) 67%, rgba(73, 77, 77, 0.808) 70%);
+        user-select: none;
     }
     #container .card{
       transition: transform 0.5s,box-shadow 0.5s;
@@ -40,7 +41,7 @@
     #container .card:hover{
       transform: translateX(20px);
       transform-style: preserve-3d;
-      box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.4);
+      box-shadow: -10px 0px 12px rgba(0, 0, 0, 0.8);
     }
   </style>
 </head>
