--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,7 @@
         linear-gradient(to bottom right, rgba(63, 63, 56, 0.8) 30%, transparent 32%),
         linear-gradient(to bottom right, transparent 78%, rgba(61, 58, 58, 0.788) 80%),
         linear-gradient(to bottom left, rgba(53, 52, 52, 0.808) 67%, rgba(73, 77, 77, 0.808) 70%);
+        user-select: none;
         }
 
         #container .card {
@@ -50,7 +51,6 @@
             width: 70%;
             background-color: floralwhite;
             text-align: justify;
-            border: 1px solid grey;
             border-radius:0 0 5px 5px;
             margin:0 auto 35px auto;
             box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
