--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     }
     #container .card{
       transition: transform 0.5s,box-shadow 0.5s;
+      height: 400px;
     }
     img{
       width: 100%;
@@ -37,6 +38,10 @@
       object-fit: cover;
       padding: 16px 16px 0 16px;
       border-radius: 50px;
+    }
+    p.card-text{
+      height: 100px;
+      overflow: hidden;
     }
     #container .card:hover{
       transform: translateX(20px);
