--- a/blog.html
+++ b/blog.html
@@ -21,11 +21,13 @@
             div#date {
                 width: 85%;
             }
-            pre{
-                font-size: 14px!important;
+
+            pre {
+                font-size: 14px !important;
             }
-            #date{
-                font-size: 15px!important;
+
+            #date {
+                font-size: 15px !important;
             }
         }
 
@@ -34,11 +36,13 @@
             div#date {
                 width: 90%;
             }
-            pre{
-                font-size: 12px!important;
+
+            pre {
+                font-size: 12px !important;
             }
-            #date{
-                font-size: 14px!important;
+
+            #date {
+                font-size: 14px !important;
             }
         }
 
@@ -52,6 +56,8 @@
                 linear-gradient(to bottom right, transparent 78%, rgba(61, 58, 58, 0.788) 80%),
                 linear-gradient(to bottom left, rgba(53, 52, 52, 0.808) 67%, rgba(73, 77, 77, 0.808) 70%);
             user-select: none;
+            min-height: 100vh;
+            position: relative;
         }
 
         #container .card {
@@ -65,7 +71,7 @@
         }
 
         #content {
-            background-color: floralwhite;
+            background-color: lightgray;
             text-align: justify;
             border-radius: 0 0 5px 5px;
             margin: 0 auto 35px auto;
@@ -86,6 +92,7 @@
             justify-content: space-between;
             align-items: center;
         }
+
         pre {
             overflow-x: auto;
             white-space: pre-wrap;
@@ -96,35 +103,69 @@
             font-size: 16px;
             font-family: Merriweather;
         }
-        a{
+
+        a {
             text-decoration: none;
             color: white;
+        }
+
+        #developer {
+            padding: 10px;
+            background-color: black;
+            border-radius: 20px 20px 0 0;
+            width: 300px;
+            color: white;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            transition: background-color 0.2s ease-in-out;
+        }
+
+        #developer:hover {
+            background-color: black !important;
+        }
+
+        #content-wrap {
+            padding-bottom: 44px;
         }
     </style>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0%; z-index: 2;">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">The Polymaths</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="writers.html">Writers</a>
-                    </li>
-                </ul>
+    <div id="content-wrap">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0%; z-index: 2;">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">The Polymaths</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="writers.html">Writers</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+    </div>
+    <a href="https://samirkaushik.netlify.app" style="text-decoration:none">
+        <div id="developer" class="bg-dark">Developed with
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+            </svg>
+            by Samir
         </div>
-    </nav>
+    </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -132,15 +173,20 @@
 <script type="module">
     import { data } from "./data.js"
     var blog_title = localStorage.getItem("blog title");
+    document.title = blog_title;
     for (var i = 0; i < data.length; i++) {
         if (data[i].title == blog_title) {
-            document.body.innerHTML += `
-            <div id="date"><div>Published : ${data[i].date}</div><div id="author"><a href="writers.html">-${data[i].author}</a></div></div>
+            document.getElementById("content-wrap").innerHTML += `
+            <div id="date">
+                <div>Published : ${data[i].date}</div>
+                <div id="author"><a href="writers.html">-${data[i].author}</a></div>
+            </div>
             <div id="content">
-            <h2 style="text-align: center;">${data[i].title}</h2>
-            <hr>
-            <p><pre>${data[i].article}</pre></p>
-    </div>`;
+                <h2 style="text-align: center;">${data[i].title}</h2>
+                <hr>
+                <p><pre>${data[i].article}</pre></p>
+            </div>`;
+            document.head.innerHTML += `<link rel="icon" type="image/gif/png" href=${data[i].image}>`;
         }
     }
 </script>
