--- a/index.html
+++ b/index.html
@@ -26,57 +26,112 @@
         linear-gradient(to bottom right, rgba(63, 63, 56, 0.8) 30%, transparent 32%),
         linear-gradient(to bottom right, transparent 78%, rgba(61, 58, 58, 0.788) 80%),
         linear-gradient(to bottom left, rgba(53, 52, 52, 0.808) 67%, rgba(73, 77, 77, 0.808) 70%);
-        user-select: none;
+      user-select: none;
+      min-height: 100vh;
+      position: relative;
     }
-    #container .card{
-      transition: transform 0.5s,box-shadow 0.5s;
+
+    #container .card {
+      transition: transform 0.5s, box-shadow 0.5s;
       height: 400px;
+      background-color: lightgray;
     }
-    img{
+
+    img {
       width: 100%;
       height: 180px;
       object-fit: cover;
       padding: 16px 16px 0 16px;
       border-radius: 50px;
     }
-    p.card-text{
+
+    p.card-text {
       height: 100px;
       overflow: hidden;
     }
-    #container .card:hover{
+
+    #container .card:hover {
       transform: translateX(20px);
       transform-style: preserve-3d;
       box-shadow: -10px 0px 12px rgba(0, 0, 0, 0.8);
+    }
+
+    #developer {
+      padding: 10px;
+      border-radius: 20px 20px 0 0;
+      width: 300px;
+      color: white;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: background-color 0.2s ease-in-out;
+    }
+
+    #developer:hover {
+      background-color: black !important;
+    }
+
+    #content-wrap {
+      padding-bottom: 44px;
+    }
+
+    .btn {
+      border: 1px solid white;
+    }
+
+    .btn:hover {
+      background-color: black;
+    }
+
+    #searchInput {
+      border: white 1px solid;
+    }
+
+    #searchInput:focus {
+      background-color: black !important;
     }
   </style>
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0%; z-index: 2;">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">The Polymaths</a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="writers.html">Writers</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" id="searchInput" placeholder="Search blog" aria-label="Search">
-          <div class="btn btn-primary" id="searchButton">Search</div>
-        </form>
+  <div id="content-wrap">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: sticky; top: 0%; z-index: 2;">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">The Polymaths</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="writers.html">Writers</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2 bg-dark text-white shadow-none" type="search" id="searchInput"
+              placeholder="Search blog" aria-label="Search">
+            <div class="btn btn-dark" id="searchButton">Search</div>
+          </form>
+        </div>
       </div>
+    </nav>
+    <div class="d-flex flex-wrap justify-content-evenly" id="container"></div>
+  </div>
+  <a href="https://samirkaushik.netlify.app" style="text-decoration:none">
+    <div id="developer" class="bg-dark">Developed with
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+      </svg>
+      by Samir
     </div>
-  </nav>
-  <div class="d-flex flex-wrap justify-content-evenly" id="container"></div>
+  </a>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
