--- a/blog.html
+++ b/blog.html
@@ -156,7 +156,7 @@
             </div>
         </nav>
     </div>
-    <a href="https://samirkaushik.netlify.app" style="text-decoration:none">
+    <!-- <a href="https://samirkaushik.netlify.app" style="text-decoration:none">
         <div id="developer" class="bg-dark">Developed with
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill"
                 viewBox="0 0 16 16">
@@ -165,7 +165,7 @@
             </svg>
             by Samir
         </div>
-    </a>
+    </a> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
